# isaac-sim-louvre-scene-builder

./: .gitignore  NAV2_GUIDE.md  README.md  generate_map.py  isaac-sim-lou.sh  reset_robot_pose.py
exts/louvre.scene.builder/: README.md  extension.toml
exts/louvre.scene.builder/louvre/scene/builder/: extension.py
ros_nodes/louvre_navigation/: README.md  package.xml  setup.cfg  setup.py
ros_nodes/louvre_navigation/launch/: louvre_navigation.launch.py  louvre_slam.launch.py  louvre_tf.launch.py
ros_nodes/louvre_navigation/louvre_navigation/: depth_republisher.py  laser_scan_merger.py
ros_nodes/louvre_navigation/params/: louvre_navigation_params.yaml  slam_params.yaml
ros_nodes/louvre_navigation/rviz2/: louvre_navigation.rviz  louvre_slam.rviz
ros_nodes/trash_detection/: README.md  go_to_trash.py  package.xml  setup.py  test_dect.py
scenes/: louvre_complete_scene.usd
